--- a/foodmonster/ru.lproj/Localization.strings
+++ b/foodmonster/ru.lproj/Localization.strings
@@ -52,7 +52,7 @@
 
 "newRecipe" = "Новый Рецепт";
 
-"editRecipe" = "Редактирование рецептв";
+"editRecipe" = "Редактирование";
 
 "verificationError" = "Ошибка Верификации";
 
